--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="www.linkedin.com/in/alvin-obonyo">juliamuiruri</a>
+                        <a href="www.linkedin.com/in/alvin-obonyo">alvinobonyo</a>
                     </p>
 				</section>
 				<section>
