--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,9 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>I am a software engineer enthusiastic with problem solving and teamwork as my core competencies with a great attention to detail. 
-                        Experienced in various blah blah blah to provide technical skilling opportunities for the student developer community. 
-                        Lifelong learner and a responsible advocate with exceptional soft and technical skills</p>
+                    <p>I am a software engineer enthusiast with problem solving and teamwork as my core competencies with a great attention to detail. 
+                        skilling opportunities for the student developer community. 
+              skills</p>
 				</section>
 				<section>
 					<h2>AFFILIATIONS</h2>
