--- a/resume.html
+++ b/resume.html
@@ -54,8 +54,8 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>I am a software engineer enthusiast with problem solving and teamwork as my core competencies with a great attention to detail. 
-                        skilling opportunities for the student developer community. 
+                    <p>I am a self taught software engineer with problem solving and teamwork as my core competencies with a great attention to detail. 
+                       
               skills</p>
 				</section>
 				<section>
