--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,7 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>I am a self taught software engineer with problem solving and teamwork as my core competencies with a great attention to detail. 
-                       
-              skills</p>
+                    <p>A self taught motivated lifelong individual with problem solving and teamwork as my core competencies with great attention to detail. I am experienced in various technical skills through Microsoft Learn, Microsoft Peer to peer mentorship program with exceptionally soft and technical skills</p>
 				</section>
 				<section>
 					<h2>AFFILIATIONS</h2>
