--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,9 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>A self taught motivated lifelong individual with problem solving and teamwork as my core competencies with great attention to detail. I am experienced in various technical skills through Microsoft Learn, Microsoft Peer to peer mentorship program with exceptionally soft and technical skills</p>
+                    <p> Motivated self-taught lifelong individual with problem solving and teamwork as my core competencies
+with great attention to detail. I am experienced in various technical skills through Microsoft Learn, Microsoft
+Peer to peer mentorship program and ALX with exceptionally soft and technical skills.</p>
 				</section>
 				<section>
 					<h2>AFFILIATIONS</h2>
